--- a/views/catalogue.ejs
+++ b/views/catalogue.ejs
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Catalogue</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/catalogue.css">
@@ -55,14 +55,14 @@
 
 
     <div class="video-part">
-      <div class="our-team">
+      <div class="our-team"> 
           <h1 class="our-team-header">GUITAR LESSONS</h1>
           <h1 class="our-team-header" style="color:rgb(194, 42, 42);">THAT REALLY WORK</h1>
           <p class="our-team-content">Learn guitar online with world-class instructors and</p>
           <p class="our-team-content">become the best guitar player you can be.</p>
           </div>
       <div class = "video_box">
-          <video id="home-video" src="images/catalogue-video.mp4" type="video/mp4" controls></video>
+          <video poster="images/logo.jpg"  id="home-video" src="images/catalogue-video.mp4" type="video/mp4" controls></video>
       </div>
   </div>
 
@@ -254,8 +254,120 @@
                 </div>
               </div>
           </div>
-        </div>
+        
           <br>
+
+
+          <div class="beginner">
+            <div class="title-seeall">
+                <div class="title">
+            <h1 style="color: rgb(255, 255, 255); font-family: 'Bruno Ace', cursive;">UKULELE</h1>
+        </div>
+        <div class="see-all">
+            <button onclick="window.location.href = '/beginnercoursedesc' " class="see-all-button">
+                <div class = "see-all-txt">See All</div>
+                <img src="images/seemore.png">
+            </button>
+        </div>
+        </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4 cards">
+                <div class="col card-pad">
+                    <div class="card crd">
+                      <a href="/coursedescpage"><img src="images/uke-andy.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
+                      <div class="card-body">
+                        <h6 class="card-title">10 Day Ukulele Starter</h6>
+                        <h6 class="card-title">By Andy Gilmour</h6>
+                        <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+                      </div>
+                    </div>
+                  </div>
+
+                <div class="col card-pad">
+                  <div class="card crd">
+                    <a href="#"><img src="images/uke-justin.jpg" class="card-img-top" style="height: 197px; width: 347px ;" alt="..."></a>
+                    <div class="card-body">
+                      <h6 class="card-title">Ukulele for Beginners</h6>
+                      <h6 class="card-title">By Justin Young</h6>
+                      <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
+        
+
+
+        <div class="beginner">
+          <div class="title-seeall">
+              <div class="title">
+          <h1 style="color: rgb(255, 255, 255); font-family: 'Bruno Ace', cursive;">MUSIC THEORY</h1>
+      </div>
+      <div class="see-all">
+          <button onclick="window.location.href = '/beginnercoursedesc' " class="see-all-button">
+              <div class = "see-all-txt">See All</div>
+              <img src="images/seemore.png">
+          </button>
+      </div>
+      </div>
+          <div class="row row-cols-1 row-cols-md-3 g-4 cards">
+              <div class="col card-pad">
+                  <div class="card crd">
+                    <a href="/coursedescpage"><img src="images/mt-andy.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
+                    <div class="card-body">
+                      <h6 class="card-title">Music Theory</h6>
+                      <h6 class="card-title">By Andy Gilmour</h6>
+                      <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+                    </div>
+                  </div>
+                </div>
+
+              
+            </div>
+        </div>
+
+
+        <div class="beginner">
+          <div class="title-seeall">
+              <div class="title">
+          <h1 style="color: rgb(255, 255, 255); font-family: 'Bruno Ace', cursive;">GEAR CARE</h1>
+      </div>
+      <div class="see-all">
+          <button onclick="window.location.href = '/beginnercoursedesc' " class="see-all-button">
+              <div class = "see-all-txt">See All</div>
+              <img src="images/seemore.png">
+          </button>
+      </div>
+      </div>
+          <div class="row row-cols-1 row-cols-md-3 g-4 cards">
+              <div class="col card-pad">
+                  <div class="card crd">
+                    <a href="/coursedescpage"><img src="images/gear-andy.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
+                    <div class="card-body">
+                      <h6 class="card-title">Guitars, Amps And Pedals</h6>
+                      <h6 class="card-title">By Andy Gilmour</h6>
+                      <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+                    </div>
+                  </div>
+                </div>
+
+              <div class="col card-pad">
+                <div class="card crd">
+                  <a href="#"><img src="images/gear-justin.jpg" class="card-img-top" style="height: 197px; width: 347px ;" alt="..."></a>
+                  <div class="card-body">
+                    <h6 class="card-title">Set up your electric guitar</h6>
+                    <h6 class="card-title">By Justin Young</h6>
+                    <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+
+
+        
+      </div>
+
+  
 
 
 
