--- a/views/coursepage.ejs
+++ b/views/coursepage.ejs
@@ -10,71 +10,151 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/coursepage.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Special+Elite&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Lobster&family=Montserrat:ital,wght@1,100&family=Oswald:wght@300;400&family=Oxygen:wght@300;700&family=Prompt:wght@600&family=Quicksand:wght@300&family=Righteous&family=Secular+One&family=Tilt+Prism&display=swap" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Shadows+Into+Light&family=Special+Elite&display=swap" rel="stylesheet">
     </head>
-    <body bgcolor="black">
+    <body style="background-color: black;">
         <%- include('header'); -%>
-        <div class="top-bar">
-        <div class="course-title">
-            <h1>GETTING STARTED</h1>
+        <div class="title-head">
+            <h1>
+                BEGINNER ACOUSTIC GUITAR
+            </h1>
         </div>
-        <div>
-            <button class="add-to-fav-button">
-                <div class="button-icon">
-                    <img src="images/wishlisticon.png">
-                </div>
-                <div class="button-text">
-                    Add Course to Wishlist
-                </div>
-            </button>
-        </div>
-    </div>
 
-        <div class = "main-video">
-            <div>
-            <video poster="images/acousticpic.jpg" id="main-video" src="videos/beginner1.mp4" type="video/mp4" controls></video>
+        <div class="video-title">
+            <h2>
+                1.Your very first acoustic guitar lesson
+            </h2>
         </div>
-        </div>
-        <div class="fav-share-buttons">
-            <div>
-                <button class="add-to-fav-button">
-                    <div class="button-icon">
-                        <img src="images/wishlisticon.png">
-                    </div>
-                    <div class="button-text">
-                        Add to Favourites
-                    </div>
+
+        <div class="buttons">
+            <div class="">
+                <button class="wishlist-butt">
+                    Add To Wishlist
+                    <img src="images/wishlisticon.png" class="button-icon"></button>
                 </button>
             </div>
-
-            <div>
-                <button class="add-to-fav-button">
-                    <div>
-                        <img src="images/buynow.png">
-                    </div>
-                    <div class="button-text">
-                        Buy Now
-                    </div>
-                </button>
-            </div>
-
-        <div>
-            <button class="add-to-fav-button">
-                <div>
-                    <img src="images/share-button.png">
-                </div>
-                <div class="button-text">
-                    Share
-                </div>
-            </button>
         </div>
-        
-    </div>
-    <hr style="color: azure;">
 
-        
+        <div class="current-video">
+            <center>
+                <iframe width="840" height="473" src="https://www.youtube.com/embed/HNSaXAe8tyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </center>
+        </div>
+
+        <div class="buttons">
+            <div class="button-out">
+                
+                
+        <div class="prev-"><button class="prev-butt"><img src="images/prev-icon.png">Previous</button>
+        </div>
+        </div>
+
+            <div class="button-out">
+                <div class="next-">
+                <button class="next-butt">Next<img src="images/next-icon.png"></button>
+            </div>
+            </div>
+        </div>
+
+        <div class="course-details">
+            <!-- <center> -->
+                <div class="course-box">
+                <div class="title-style">
+                    <div class = "style1">Course Content: </div>
+                   
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="list1">
+                            <ul class="list1">
+                                <li class="mt-0">
+                                    <div>
+                                        <div>
+                                        <span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                    <a style="text-decoration: none; color:black;" href="#">1)<b>Video:</b>Your very first acoustic guitar lesson</a>
+                                    </div>
+                                    <div>16 min</div>
+
+                                    </div>
+                                    
+                                </li>
+                                <li class="mt-0">
+                                    <div>
+
+                                       <div><span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                    <a style="text-decoration: none; color:black;" href="#">2)<b>Video:</b>The A major chord</a>
+                                </div> 
+                                    <div>12 min
+                                    </div>
+                                    </div>
+                                    
+            
+                                </li>
+
+                                <li class="mt-0">
+                                    <div>
+                                    <div><span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                    <a style="text-decoration: none; color:black;" href="#">3)<b>Video:</b>The G major chord</a>
+                                    </div>
+                                    <div>11 min</div>
+                                </div>
+                                </li>
+                
+                                <li class="mt-0">
+                                    <div>
+
+                                    
+                                    <div><span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                    <a style="text-decoration: none; color:black;" href="#">4)<b>Video:</b>The D major chord</a>
+                                </div>
+                                    <div>9 min</div>
+                                </div>
+                                </li>
+                                <li class="mt-0">
+                                    <div>
+                                    <div><span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                    <a style="text-decoration: none; color:black;" href="#">5)<b>Video:</b>The A minor and E major Chords</a>
+                                </div>
+                                    <div>15 min</div>
+                                </div>
+                                </li>
+                                <li class="mt-0">
+                                    <div>
+                                    <div>
+                                    <span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                    <a style="text-decoration: none; color:black;" href="#">6)<b>Video:</b>The C major chord</a>
+                                </div>
+                                    <div>20 min</div>
+                                </div>
+                                </li>
+                                <li class="mt-0">
+                                    <div>
+                                    <div><span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                    <a style="text-decoration: none; color:black;" href="#">7)<b>Video:</b>The F major chord</a>
+                                </div>
+                                    <div>8 min</div>
+                                </div>
+                                </li>
+                                <li class="mt-0">
+                                    <div>
+                                    <div><span class = "greentick mt-0"><img src="images/course-content-icon.png" alt="" width="20px"></span>
+                                    <a style="text-decoration: none; color:black;" href="#">8)<b>Video:</b>The D minor chord</a>
+                                </div>
+                                    <div>8 min</div>
+                                </div>
+                                </li>
+                        </div>
+                   </ul>
+            </div>
+         
+            </div>
+        </div>
+    <!-- </center> -->
+        </div>
         
         
         <%- include('footer'); -%>
