--- a/public/css/coursepage.css
+++ b/public/css/coursepage.css
@@ -1,58 +1,85 @@
-#main-video{
-    padding: 50px;
-    height: 500px;
-    width:850px;
-    /* align-items: center; */
-    display: flex;
-    justify-content: center;
-}
 
-.main-video{
-    justify-content:space-between;
-}
-
-body{
-    color: white;
-
+.title-head{
+    background-color: #3d3d3d;
+    color:aqua;
+    padding: 10px;
+    font-family: 'Bruno Ace', cursive;
 }
 
 
-h1 {
 
-    /* text-shadow: -1px 1px 0 #0a6cddae,
-                          1px 1px 0 #0a6cddae,
-                         1px -1px 0 #0a6cddae,
-                        -1px -1px 0 #0a6cddae; */
-    color: rgba(255, 255, 255, 0.967);
-    padding: 5px;
-    margin: 5px;
-    /* margin-left: 1000px; */
-    font-family: 'Shadows Into Light', cursive;
-    text-shadow: 10px 10px 25px #00fff2;
-    font-size: 47px;
-    font-style: normal;
-    font-variant: normal;
-    line-height: 44px;
-
-
+ 
+.current-video{
+    margin-top: 20px;
 }
 
 
-.top-bar{
-    background-color: rgb(43, 43, 43);
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-}
 
-
-button{
+.course-box{
+ 
+    box-shadow: 0px 6px 34px rgba(255, 255, 255, 0);
+    background-color: rgba(255, 255, 255, 0.889);
+    padding: 30px;
+    border-radius: 6px;
+    margin-top: 1.5rem;
+    }
     
-    background-color: rgb(1, 150, 200);
-    border-radius: 25px;
-    /* border: 30px; */
+.course-content{
+        max-height: 300px;
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .title-style{
+        border-bottom: 2px solid #e6e3f14f;
+        margin-bottom: 24px;
+        padding-bottom: 20px;
+        }
+
+        .style1{
+            font-size: 20px;
+            line-height: 1.25;
+            font-weight: 700;
+            word-break: break-word;
+            margin: 0;
+            font-family: "Euclid Circular", Arial, sans-serif;
+            color: #464646;
+        }
+
+        .list1 li {
+            padding: 5px;
+            display: flex;
+            font-size: 18px;
+            margin: 7px 0;
+            margin-top: 7px;
+            line-height: 1.45;
+            color: #373737;
+            font-family: 'Quicksand', sans-serif;
+          }
+        
+          .greentick{
+            padding-right: 0.7rem;
+            margin-top: 15px;
+            line-height: 1;
+          }
+
+
+          
+
+
+          .video-title{
+            font-family: 'Quicksand', sans-serif;
+            padding: 5px;
+            background-color: rgb(255, 255, 255);
+            color: rgb(152, 29, 29);
+            font-weight: bold;
+          }
+button{
+    padding: 10px;
+    
+    background-color: rgb(0, 191, 255);
+    border-radius: 20px;
 }
 
 button:hover{
@@ -69,9 +96,42 @@ button:hover{
 
 }
 .button-icon:hover{
-    background-image: url(images/wishlisthover.png);
+    background-image: url(../images/wishlisthover.png);
 }
 
+.wishlist-butt{
+    margin-top: 5px;
+    font-family: 'Bruno Ace', cursive;
+    border-radius: 30px;
+}
+
+.prev-butt{
+    font-family: 'Bruno Ace', cursive;
+    border-radius: 30px;
+}
+
+.next-butt{
+    font-family: 'Bruno Ace', cursive;
+    border-radius: 30px;
+}
+
+.buttons{
+    margin-bottom: 20px;
+}
+
+.button-out{
+    /* margin-bottom: 20px; */
+    float: left; 
+    width: 50%;
+}
+
+.prev-{
+    margin-left: 50%;
+}
+
+.next-{
+    margin-left: 50%;
+}
 
 .button-text{
     font-size: 15px;
