--- a/public/css/wishlist.css
+++ b/public/css/wishlist.css
@@ -234,7 +234,7 @@ margin-bottom: 1.6rem;
     align-self: center;
     margin-top: 10px;
     align-self: end;
-    margin-right: 0.8rem;
+    margin-left: 2.2rem;
     scale: 1.5;
     
 }
