--- a/views/instructor.ejs
+++ b/views/instructor.ejs
@@ -32,63 +32,61 @@
           </div>
       </div>
 
-        <div class="course-heading">OUR MASTERS OF MUSIC</div>
+       
 
 
-        <div class="container text-center inst-grid" style="color: aliceblue;">
+        <div class="card-bg">
+          <div class="course-heading">OUR MASTERS OF MUSIC</div>
+        <div class="container text-center inst-grid grid-txt" style="color: aliceblue;">
             <div class="row" id="col1">
                 <div class="col" >
                     <div class="card card-prop" style="width: 18rem;">
-                        <img src="images/marty-inst.jpg" class="card-img-top" alt="...">
+                        <img src="images/marty-inst.jpg" class="card-img-top img-size" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title">Marty Schwartz</h5>
+                          <p class="card-text">Hey whatsup you guys? Marty Schwartz here and I am here to help you with your music learning</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                          <li class="list-group-item">An item</li>
-                          <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>
+                          <li class="list-group-item">Blues, Rock</li>
+                          <li class="list-group-item">@martyschwartz</li>
                         </ul>
                         <div class="card-body">
-                          <a href="#" class="card-link">Card link</a>
-                          <a href="#" class="card-link">Another link</a>
+                          <a href="#" class="card-link">View Profile</a>
                         </div>
                       </div>
                     
                 </div>
                 <div class="col" >
                     <div class="card card-prop" style="width: 18rem;">
-                        <img src="images/marty-inst.jpg" class="card-img-top" alt="...">
+                        <img src="images/carl-pic.jpg" class="card-img-top img-size" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title">Carl Brown</h5>
+                          <p class="card-text">Hey guys Carl Brown here and I am here to teach you metal techniques</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                          <li class="list-group-item">An item</li>
-                          <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>
+                          <li class="list-group-item">Metal</li>
+                          <li class="list-group-item">@iplaygitar</li>
                         </ul>
                         <div class="card-body">
-                          <a href="#" class="card-link">Card link</a>
-                          <a href="#" class="card-link">Another link</a>
+                          <a href="#" class="card-link">View Profile</a>
                         </div>
                       </div>
                 </div>
                 <div class="col" >
                     <div class="card card-prop" style="width: 18rem;">
-                        <img src="images/marty-inst.jpg" class="card-img-top" alt="...">
+                        <img src="images/andy-pic.jpg" class="card-img-top img-size" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-title">Andy Gilmour</h5>
+                          <p class="card-text">Hey Folks! This is Andy to teach you everything about music from scratch</p>
                         </div>
                         <ul class="list-group list-group-flush">
-                          <li class="list-group-item">An item</li>
-                          <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>
+                          <li class="list-group-item">Music Theory, Ukulele</li>
+                          <li class="list-group-item">@andyguitar</li>
+
                         </ul>
                         <div class="card-body">
-                          <a href="#" class="card-link">Card link</a>
-                          <a href="#" class="card-link">Another link</a>
+                          <a href="#" class="card-link">View Profile</a>
+                    
                         </div>
                       </div>
                 </div>
@@ -97,7 +95,23 @@
             <div class="row" id="col1">
                 <div class="col" >
                     <div class="card card-prop" style="width: 18rem;">
-                        <img src="images/marty-inst.jpg" class="card-img-top" alt="...">
+                        <img src="images/justin-pic.jpg" class="card-img-top img-size" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Justin Young</h5>
+                          <p class="card-text">Justin here helping you to learn the classy acoustic guitar! See you around the course</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item">Acoustic, Gear Care</li>
+                          <li class="list-group-item">@justinyoung</li>
+                        </ul>
+                        <div class="card-body">
+                          <a href="#" class="card-link">View Profile</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col" >
+                    <div class="card card-prop" style="width: 18rem;">
+                        <img src="images/marty-inst.jpg" class="card-img-top img-size" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -115,25 +129,7 @@
                 </div>
                 <div class="col" >
                     <div class="card card-prop" style="width: 18rem;">
-                        <img src="images/marty-inst.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">An item</li>
-                          <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>
-                        </ul>
-                        <div class="card-body">
-                          <a href="#" class="card-link">Card link</a>
-                          <a href="#" class="card-link">Another link</a>
-                        </div>
-                      </div>
-                </div>
-                <div class="col" >
-                    <div class="card card-prop" style="width: 18rem;">
-                        <img src="images/marty-inst.jpg" class="card-img-top" alt="...">
+                        <img src="images/marty-inst.jpg" class="card-img-top img-size" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -150,70 +146,9 @@
                       </div>
                 </div>
             </div>
-    
-            <div class="row" id="col1">
-                <div class="col" >
-                    <div class="card card-prop" style="width: 18rem;">
-                        <img src="images/marty-inst.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">An item</li>
-                          <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>
-                        </ul>
-                        <div class="card-body">
-                          <a href="#" class="card-link">Card link</a>
-                          <a href="#" class="card-link">Another link</a>
-                        </div>
-                      </div>
-                </div>
-                <div class="col" >
-                    <div class="card card-prop" style="width: 18rem;">
-                        <img src="images/marty-inst.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">An item</li>
-                          <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>
-                        </ul>
-                        <div class="card-body">
-                          <a href="#" class="card-link">Card link</a>
-                          <a href="#" class="card-link">Another link</a>
-                        </div>
-                      </div>
-                </div>
-                <div class="col" >
-                    <div class="card card-prop" style="width: 18rem;">
-                        <img src="images/marty-inst.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">An item</li>
-                          <li class="list-group-item">A second item</li>
-                          <li class="list-group-item">A third item</li>
-                        </ul>
-                        <div class="card-body">
-                          <a href="#" class="card-link">Card link</a>
-                          <a href="#" class="card-link">Another link</a>
-                        </div>
-                      </div>
-                </div>
-            </div>
-        </div>       
-        
-
-        <div>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/HNSaXAe8tyg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-
+    </div>
+            
+  </div>
 
           <%- include('footer'); -%>
 
